--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "cors": "^2.8.5",
+    "create-react-app": "^2.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
