--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express-validator": "^5.3.0",
     "mongoose": "^5.4.0",
     "node-gyp": "^3.8.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "react-bootstrap": "^0.32.4",
+    "webpack": "^4.29.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
